cambio general de aspectos

--- a/index.html
+++ b/index.html
@@ -29,28 +29,34 @@
         </nav>
 
     </header>
+
     <hr class="hrborder">
-    <main>
-        <section>
-            <!--contenido del inicio-->
-            <u>
-                <h1 class="titulo1" style="text-align: center;"><img style="margin-right: 30px;" src="./img/itf.jpg"
-                        alt="itflogo" width="75px" height="75px" class="itf">TAEKWON-DO ITF<img
-                        style="margin-left: 30px;" src="./img/itf.jpg" alt="itflogo" width="75px" height="75px"
-                        class="itf"></h1>
-            </u>
-            <hr class="hrborder"><br><br>
-            <br>
+    <main class="main">
+        <!--Contenido principal-->
+        <div class="grid1">
 
-            <div>
-                <h3><u class="t1">TORNEO AGOSTO 2022</u></h3><br><br>
-
-                <img class="imagenindex1" src="./img/imagen1.jpeg" alt="Imagen 1" width="500px" height="500px">
-                <img class="imagenindex1" src="./img/imagen2.jpeg" alt="Imagen 1" width="500px" height="500px">
-                <br><br><br>
+            <div class="tituloprincipal">
+                <h1 class="bord1 titulo1" style="text-align: center;"><img style="margin-right: 30px;"
+                        src="./img/itf.jpg" alt="itflogo" width="75px" height="75px" class="itf">TAEKWON-DO ITF<img
+                        style="margin-left: 30px;" src="./img/itf.jpg" alt="logo de taekwondo" width="75px"
+                        height="75px" class="itf"></h1>
             </div>
-        </section>
+            <div class="septiembre">
+                <h3 class="promocion1">PROMOCIÓN ESPECIAL SEPTIEMBRE!</h3>
+            </div>
+            <div class="fotopromo"><img class="imagenindex1" src="./img/folletopromocion.jpg" alt="folleto promocion">
+            </div>
+            <div class="textopromo">
+                <h2 class="texto3">Llevando este folleto tenes <span class="colortex">UN MES GRATIS</span> para entrenar
+                    con
+                    nosotros!<br><br> Te lo vas
+                    a perder?
+                </h2>
+            </div>
+        </div>
+
     </main>
+
     <hr class="hrborder">
     <footer>
         <!--pie de pagina-->
