--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -30,12 +30,12 @@
 
     </header>
     <hr class="hrborder">
-    <main>
+    <main class="main">
 
         <section>
             <!--Formulario para contactar-->
             <br>
-            <h1 class="titulo1" style="text-align: center;" class="t2"><img style="margin-right: 30px;"
+            <h1 class="titulo1 bord1" style="text-align: center;" class="t2"><img style="margin-right: 30px;"
                     src="../img/itf.jpg" alt="itflogo" width="75px" height="75px" class="itf">Contactanos<img
                     style="margin-left: 30px;" src="../img/itf.jpg" alt="itflogo" width="75px" height="75px"
                     class="itf"></h1>
