--- a/pages/dondeencontrarnos.html
+++ b/pages/dondeencontrarnos.html
@@ -29,12 +29,12 @@
 
     </header>
     <hr class="hrborder">
-    <main>
+    <main class="main">
         <section>
             <!--localizacion-->
 
             <br>
-            <h1 class="titulo1" style="text-align: center;"><img style="margin-right: 30px;" src="../img/itf.jpg"
+            <h1 class="titulo1 bord1" style="text-align: center;"><img style="margin-right: 30px;" src="../img/itf.jpg"
                     alt="itflogo" width="75px" height="75px" class="itf">¿Quieres entrenar con nosotros?<img
                     style="margin-left: 30px;" src="../img/itf.jpg" alt="itflogo" width="75px" height="75px"
                     class="itf"></h1>
