--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -32,28 +32,24 @@
     </header>
     <hr class="hrborder">
 
-    <main>
+    <main class="main">
         <section>
             <!--Galeria de imagenes / se agregaran mas cuando avance el proyecto-->
             <br>
-            <h1 class="titulo1" style="text-align: center;"><img style="margin-right: 30px;" src="../img/itf.jpg"
+            <h1 class="titulo1 bord1" style="text-align: center;"><img style="margin-right: 30px;" src="../img/itf.jpg"
                     alt="itflogo" width="75px" height="75px" class="itf">Galeria de fotos<img style="margin-left: 30px;"
                     src="../img/itf.jpg" alt="itflogo" width="75px" height="75px" class="itf"></h1><br><br>
             <hr class="hrborder"><br><br>
 
 
-            <div>
-                <img class="fotogaleria" src="../img/t1.jpg" alt="fotopateando1" width="350px" height="250px">
-                <hr class="hrborder"><br><br>
-                <img class="fotogaleria" src="../img/t2.jpg" alt="fotopateando2" width="350px" height="250px">
-                <hr class="hrborder"><br><br>
-                <img class="fotogaleria" src="../img/t3.jpg" alt="fotopateando3" width="350px" height="250px">
-                <hr class="hrborder"><br><br>
-                <img class="fotogaleria" src="../img/suska1.jpg" alt="fotopateando4" width="350px" height="250px">
-                <hr class="hrborder"><br><br>
-                <img class="fotogaleria" src="../img/suska2.jpg" alt="fotopateando5" width="350px" height="250px">
-                <hr class="hrborder"><br><br>
-                <img class="fotogaleria" src="../img/t5.jpg" alt="fotopateando6" width="250px" height="250px">
+            <div class="grid2">
+                <div class="fot1"><img class="fotogaleria" src="../img/t1.jpg" alt="fotopateando1"> </div>
+                <div class="fot2"><img class="fotogaleria" src="../img/t2.jpg" alt="fotopateando2"> </div>
+                <div class="fot3"><img class="fotogaleria" src="../img/t3.jpg" alt="fotopateando3"> </div>
+                <div class="fot4"><img class="fotogaleria" src="../img/suska1.jpg" alt="fotopateando4"> </div>
+                <div class="fot5"><img class="fotogaleria" src="../img/suska2.jpg" alt="fotopateando5"> </div>
+                <div class="fot6"><img class="fotogaleria1" src="../img/t5.jpg" alt="fotopateando6" width="300px"
+                        height="250px"> </div>
             </div>
             <br><br><br>
 
