--- a/pages/historia.html
+++ b/pages/historia.html
@@ -30,13 +30,13 @@
 
     </header>
     <hr class="hrborder">
-    <main>
+    <main class="main">
         <section>
             <!--Contenido1-->
             <br>
-            <h1 class="titulo1" style="text-align: center; "> <img style="margin-right: 30px;" src="../img/itf.jpg"
-                    alt="itflogo" width="75px" height="75px" class="itf">Historia Del Taekwon-Do ITF<img
-                    style="margin-left: 30px;" src="../img/itf.jpg" alt="itflogo" width="75px" height="75px"
+            <h1 class="titulo1 bord1" style="text-align: center; "> <img style="margin-right: 30px;"
+                    src="../img/itf.jpg" alt="itflogo" width="75px" height="75px" class="itf">Historia Del Taekwon-Do
+                ITF<img style="margin-left: 30px;" src="../img/itf.jpg" alt="itflogo" width="75px" height="75px"
                     class="itf"></h1>
             <br><br>
             <hr class="hrborder"><br><br><br><br><br>
@@ -105,7 +105,7 @@
                             organización. <br><br></b></span>
                 </fieldset>
                 <br><br><br>
-                <img class="fotogaleria" src="../img/historiaitf.png" alt="historiaitf"><br><br>
+                <img class="fotogaleria" src="../img/historiaitf.png" alt="historia itf"><br><br>
                 <p class="p2">“Las 24 formas representan las 24 horas, un día o toda mi vida” <br>
                     Gral Choi Hong Hi
                 </p>
@@ -144,8 +144,9 @@
                             diversos tipos de grabaciones electrónicas de lo que él creó; lo que hace del Taekwon-Do el
                             arte marcial más documentado nunca. <br><br></b></span></fieldset>
                 <br><br><br>
-                <img class="fotogaleria" style="margin-right: 50px;" src="../img/generalchoi1.png" alt="generalchoi1">
-                <img class="fotogaleria" style="margin-left: 50px;" src="../img/generalchoi2.png" alt="generalchoi2">
+                <img class="fotogaleria2" style="margin-right: 50px;" src="../img/generalchoi1.png"
+                    alt="general choi 1">
+                <img class="fotogaleria2" style="margin-left: 50px;" src="../img/generalchoi2.png" alt="general choi 2">
                 <br><br>
                 <p class="p2">“Aquí dejo el Taekwondo para la humanidad como una huella del hombre del siglo XX” <br>
                     Gral Choi Hong Hi
