cambios nombres alt imagenes html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <!--Barra de navegacion-->
-        <a href="./index.html"><img class="p4" src="./img/logo.jpg" alt="logo pagina"></a>
+        <a href="./index.html"><img class="p4" src="./img/logo.jpg" alt="logo taekwondo itf"></a>
 
         <nav>
 
@@ -37,9 +37,9 @@
 
             <div class="tituloprincipal">
                 <h1 class="bord1 titulo1" style="text-align: center;"><img style="margin-right: 30px;"
-                        src="./img/itf.jpg" alt="itflogo" width="75px" height="75px" class="itf">TAEKWON-DO ITF<img
-                        style="margin-left: 30px;" src="./img/itf.jpg" alt="logo de taekwondo" width="75px"
-                        height="75px" class="itf"></h1>
+                        src="./img/itf.jpg" alt="itf logo" width="75px" height="75px" class="itf">TAEKWON-DO ITF<img
+                        style="margin-left: 30px;" src="./img/itf.jpg" alt="itf logo" width="75px" height="75px"
+                        class="itf"></h1>
             </div>
             <div class="septiembre">
                 <h3 class="promocion1">PROMOCIÓN ESPECIAL SEPTIEMBRE!</h3>
@@ -63,11 +63,11 @@
 
         <p class="p1"> Seguinos en nuestras redes sociales!</p> <br>
         <a href="https://www.instagram.com/Diego.villegas6" target="_blank"><img class="iconored"
-                src="./img/logoinsta.png" alt="logoinsta" width="50px" height="50px"></a>
+                src="./img/logoinsta.png" alt="logo instagram" width="50px" height="50px"></a>
         <a href="https://www.facebook.com/DiegONvillegas/" target="_blank"><img class="iconored" src="./img/logofb.png"
-                alt="logofb" width="50px" height="50px"></a>
+                alt="logo facebook" width="50px" height="50px"></a>
         <a href="https://twitter.com/DiegoVillegas07" target="_blank"><img class="iconored" src="./img/logotwitter.png"
-                alt="logotwitter" width="50px" height="50px"></a>
+                alt="logo twitter" width="50px" height="50px"></a>
         <br><br><br><br>
         <span class="footer1">Pagina no oficial Taekwon-do ITF Copyright DiegoVillegas©</span>
 
