--- a/pages/dondeencontrarnos.html
+++ b/pages/dondeencontrarnos.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <!--Barra de navegacion-->
-        <a href="../index.html"><img class="p4" src="../img/logo.jpg" alt="logo pagina"></a>
+        <a href="../index.html"><img class="p4" src="../img/logo.jpg" alt="logo taekwondo itf"></a>
 
         <nav>
 
@@ -35,8 +35,8 @@
 
             <br>
             <h1 class="titulo1 bord1" style="text-align: center;"><img style="margin-right: 30px;" src="../img/itf.jpg"
-                    alt="itflogo" width="75px" height="75px" class="itf">¿Quieres entrenar con nosotros?<img
-                    style="margin-left: 30px;" src="../img/itf.jpg" alt="itflogo" width="75px" height="75px"
+                    alt="itf logo" width="75px" height="75px" class="itf">¿Quieres entrenar con nosotros?<img
+                    style="margin-left: 30px;" src="../img/itf.jpg" alt="itf logo" width="75px" height="75px"
                     class="itf"></h1>
             <br><br><br>
             <hr class="hrborder">
@@ -45,7 +45,7 @@
             <fieldset class="fieldsetlocali">
                 <p class="p3"><u><b>Encontranos en: <br><br> CLUB LA TABLADA</b></u></p>
             </fieldset><br>
-            <img class="flecha2" src="../img/flecha2.png" alt="flecha2"><br><br>
+            <img class="flecha2" src="../img/flecha2.png" alt="flecha para abajo"><br><br>
 
             <fieldset class="localizacion1">
                 <span class="texto11">DIRECCION: PELAGIO LUNA 3550</span><br><br>
@@ -62,12 +62,12 @@
         <!--pie de pagina-->
 
         <p class="p1"> Seguinos en nuestras redes sociales!</p> <br>
-        <a href="https://www.instagram.com/Diego.villegas6" target="_blank"><img class="iconored"
+        <a href="https://www.instagram.com/Diego.villegas6" target="_blank"><img class="icono instagram"
                 src="../img/logoinsta.png" alt="logoinsta" width="50px" height="50px"></a>
-        <a href="https://www.facebook.com/DiegONvillegas/" target="_blank"><img class="iconored" src="../img/logofb.png"
-                alt="logofb" width="50px" height="50px"></a>
-        <a href="https://twitter.com/DiegoVillegas07" target="_blank"><img class="iconored" src="../img/logotwitter.png"
-                alt="logotwitter" width="50px" height="50px"></a>
+        <a href="https://www.facebook.com/DiegONvillegas/" target="_blank"><img class="icono facebook"
+                src="../img/logofb.png" alt="logofb" width="50px" height="50px"></a>
+        <a href="https://twitter.com/DiegoVillegas07" target="_blank"><img class="icono twitter"
+                src="../img/logotwitter.png" alt="logotwitter" width="50px" height="50px"></a>
         <br><br><br><br>
         <span class="footer1">Pagina no oficial Taekwon-do ITF Copyright DiegoVillegas©</span>
 
