--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -14,7 +14,7 @@
 
     <header>
         <!--barra de navegacion-->
-        <a href="../index.html"><img class="p4" src="../img/logo.jpg" alt="logo pagina"></a>
+        <a href="../index.html"><img class="p4" src="../img/logo.jpg" alt="logo taekwondo itf"></a>
 
         <nav>
 
@@ -37,19 +37,20 @@
             <!--Galeria de imagenes / se agregaran mas cuando avance el proyecto-->
             <br>
             <h1 class="titulo1 bord1" style="text-align: center;"><img style="margin-right: 30px;" src="../img/itf.jpg"
-                    alt="itflogo" width="75px" height="75px" class="itf">Galeria de fotos<img style="margin-left: 30px;"
-                    src="../img/itf.jpg" alt="itflogo" width="75px" height="75px" class="itf"></h1><br><br>
+                    alt="itf logo" width="75px" height="75px" class="itf">Galeria de fotos<img
+                    style="margin-left: 30px;" src="../img/itf.jpg" alt="itf logo" width="75px" height="75px"
+                    class="itf"></h1><br><br>
             <hr class="hrborder"><br><br>
 
 
             <div class="grid2">
-                <div class="fot1"><img class="fotogaleria" src="../img/t1.jpg" alt="fotopateando1"> </div>
-                <div class="fot2"><img class="fotogaleria" src="../img/t2.jpg" alt="fotopateando2"> </div>
-                <div class="fot3"><img class="fotogaleria" src="../img/t3.jpg" alt="fotopateando3"> </div>
-                <div class="fot4"><img class="fotogaleria" src="../img/suska1.jpg" alt="fotopateando4"> </div>
-                <div class="fot5"><img class="fotogaleria" src="../img/suska2.jpg" alt="fotopateando5"> </div>
-                <div class="fot6"><img class="fotogaleria1" src="../img/t5.jpg" alt="fotopateando6" width="300px"
-                        height="250px"> </div>
+                <div class="fot1"><img class="fotogaleria" src="../img/t1.jpg" alt="foto pateando 1"> </div>
+                <div class="fot2"><img class="fotogaleria" src="../img/t2.jpg" alt="foto pateando 2"> </div>
+                <div class="fot3"><img class="fotogaleria" src="../img/t3.jpg" alt="foto pateando 3"> </div>
+                <div class="fot4"><img class="fotogaleria" src="../img/suska1.jpg" alt="foto pateando 4"> </div>
+                <div class="fot5"><img class="fotogaleria" src="../img/suska2.jpg" alt="foto pateando 5"> </div>
+                <div class="fot6"><img class="fotogaleria1" src="../img/t5.jpg" alt="foto logo taekwondo itf"
+                        width="300px" height="250px"> </div>
             </div>
             <br><br><br>
 
@@ -61,12 +62,12 @@
         <!--pie de pagina-->
 
         <p class="p1"> Seguinos en nuestras redes sociales!</p> <br>
-        <a href="https://www.instagram.com/Diego.villegas6" target="_blank"><img class="iconored"
+        <a href="https://www.instagram.com/Diego.villegas6" target="_blank"><img class="icono instagram"
                 src="../img/logoinsta.png" alt="logoinsta" width="50px" height="50px"></a>
-        <a href="https://www.facebook.com/DiegONvillegas/" target="_blank"><img class="iconored" src="../img/logofb.png"
-                alt="logofb" width="50px" height="50px"></a>
-        <a href="https://twitter.com/DiegoVillegas07" target="_blank"><img class="iconored" src="../img/logotwitter.png"
-                alt="logotwitter" width="50px" height="50px"></a>
+        <a href="https://www.facebook.com/DiegONvillegas/" target="_blank"><img class="icono facebook"
+                src="../img/logofb.png" alt="logofb" width="50px" height="50px"></a>
+        <a href="https://twitter.com/DiegoVillegas07" target="_blank"><img class="icono twitter"
+                src="../img/logotwitter.png" alt="logotwitter" width="50px" height="50px"></a>
         <br><br><br><br>
         <span class="footer1">Pagina no oficial Taekwon-do ITF Copyright DiegoVillegas©</span>
 
