--- a/pages/historia.html
+++ b/pages/historia.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <!-- barra de navegacion-->
-        <a href="../index.html"><img class="p4" src="../img/logo.jpg" alt="logo pagina"></a>
+        <a href="../index.html"><img class="p4" src="../img/logo.jpg" alt="logo taekwondo itf"></a>
 
         <nav>
 
@@ -35,8 +35,8 @@
             <!--Contenido1-->
             <br>
             <h1 class="titulo1 bord1" style="text-align: center; "> <img style="margin-right: 30px;"
-                    src="../img/itf.jpg" alt="itflogo" width="75px" height="75px" class="itf">Historia Del Taekwon-Do
-                ITF<img style="margin-left: 30px;" src="../img/itf.jpg" alt="itflogo" width="75px" height="75px"
+                    src="../img/itf.jpg" alt="itf logo" width="75px" height="75px" class="itf">Historia Del Taekwon-Do
+                ITF<img style="margin-left: 30px;" src="../img/itf.jpg" alt="itf logo" width="75px" height="75px"
                     class="itf"></h1>
             <br><br>
             <hr class="hrborder"><br><br><br><br><br>
@@ -105,7 +105,7 @@
                             organización. <br><br></b></span>
                 </fieldset>
                 <br><br><br>
-                <img class="fotogaleria" src="../img/historiaitf.png" alt="historia itf"><br><br>
+                <img class="fotogaleria" src="../img/historiaitf.png" alt="foto juntos al greneral choi"><br><br>
                 <p class="p2">“Las 24 formas representan las 24 horas, un día o toda mi vida” <br>
                     Gral Choi Hong Hi
                 </p>
@@ -160,12 +160,12 @@
         <!--pie de pagina-->
 
         <p class="p1"> Seguinos en nuestras redes sociales!</p> <br>
-        <a href="https://www.instagram.com/Diego.villegas6" target="_blank"><img class="iconored"
+        <a href="https://www.instagram.com/Diego.villegas6" target="_blank"><img class="icono instagram"
                 src="../img/logoinsta.png" alt="logoinsta" width="50px" height="50px"></a>
-        <a href="https://www.facebook.com/DiegONvillegas/" target="_blank"><img class="iconored" src="../img/logofb.png"
-                alt="logofb" width="50px" height="50px"></a>
-        <a href="https://twitter.com/DiegoVillegas07" target="_blank"><img class="iconored" src="../img/logotwitter.png"
-                alt="logotwitter" width="50px" height="50px"></a>
+        <a href="https://www.facebook.com/DiegONvillegas/" target="_blank"><img class="icono facebook"
+                src="../img/logofb.png" alt="logofb" width="50px" height="50px"></a>
+        <a href="https://twitter.com/DiegoVillegas07" target="_blank"><img class="icono twitter"
+                src="../img/logotwitter.png" alt="logotwitter" width="50px" height="50px"></a>
         <br><br><br><br>
         <span class="footer1">Pagina no oficial Taekwon-do ITF Copyright DiegoVillegas©</span>
 
