modificacion real del los alts en html

--- a/pages/historia.html
+++ b/pages/historia.html
@@ -160,12 +160,12 @@
         <!--pie de pagina-->
 
         <p class="p1"> Seguinos en nuestras redes sociales!</p> <br>
-        <a href="https://www.instagram.com/Diego.villegas6" target="_blank"><img class="icono instagram"
-                src="../img/logoinsta.png" alt="logoinsta" width="50px" height="50px"></a>
-        <a href="https://www.facebook.com/DiegONvillegas/" target="_blank"><img class="icono facebook"
-                src="../img/logofb.png" alt="logofb" width="50px" height="50px"></a>
-        <a href="https://twitter.com/DiegoVillegas07" target="_blank"><img class="icono twitter"
-                src="../img/logotwitter.png" alt="logotwitter" width="50px" height="50px"></a>
+        <a href="https://www.instagram.com/Diego.villegas6" target="_blank"><img class="iconored"
+                src="../img/logoinsta.png" alt="logo instagram" width="50px" height="50px"></a>
+        <a href="https://www.facebook.com/DiegONvillegas/" target="_blank"><img class="iconored" src="../img/logofb.png"
+                alt="logo facebook" width="50px" height="50px"></a>
+        <a href="https://twitter.com/DiegoVillegas07" target="_blank"><img class="iconored" src="../img/logotwitter.png"
+                alt="logo twitter" width="50px" height="50px"></a>
         <br><br><br><br>
         <span class="footer1">Pagina no oficial Taekwon-do ITF Copyright DiegoVillegas©</span>
 
