modificacion de algunas cosas estructurales

--- a/index.html
+++ b/index.html
@@ -36,10 +36,9 @@
         <div class="grid1">
 
             <div class="tituloprincipal">
-                <h1 class="bord1 titulo1" style="text-align: center;"><img style="margin-right: 30px;"
-                        src="./img/itf.jpg" alt="itf logo" width="75px" height="75px" class="itf">TAEKWON-DO ITF<img
-                        style="margin-left: 30px;" src="./img/itf.jpg" alt="itf logo" width="75px" height="75px"
-                        class="itf"></h1>
+                <h1 class="bord1 titulo1"><img style="margin-right: 30px;" src="./img/itf.jpg" alt="itf logo"
+                        width="75px" height="75px" class="itf">TAEKWON-DO ITF<img style="margin-left: 30px;"
+                        src="./img/itf.jpg" alt="itf logo" width="75px" height="75px" class="itf"></h1>
             </div>
             <div class="septiembre">
                 <h3 class="promocion1">PROMOCIÓN ESPECIAL SEPTIEMBRE!</h3>
