--- a/pages/dondeencontrarnos.html
+++ b/pages/dondeencontrarnos.html
@@ -34,10 +34,9 @@
             <!--localizacion-->
 
             <br>
-            <h1 class="titulo1 bord1" style="text-align: center;"><img style="margin-right: 30px;" src="../img/itf.jpg"
-                    alt="itf logo" width="75px" height="75px" class="itf">¿Quieres entrenar con nosotros?<img
-                    style="margin-left: 30px;" src="../img/itf.jpg" alt="itf logo" width="75px" height="75px"
-                    class="itf"></h1>
+            <h1 class="titulo1 bord1"><img style="margin-right: 30px;" src="../img/itf.jpg" alt="itf logo" width="75px"
+                    height="75px" class="itf">¿Quieres entrenar con nosotros?<img style="margin-left: 30px;"
+                    src="../img/itf.jpg" alt="itf logo" width="75px" height="75px" class="itf"></h1>
             <br><br><br>
             <hr class="hrborder">
             </fieldset>
