--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -35,10 +35,9 @@
         <section>
             <!--Formulario para contactar-->
             <br>
-            <h1 class="titulo1 bord1" style="text-align: center;" class="t2"><img style="margin-right: 30px;"
-                    src="../img/itf.jpg" alt="itf logo" width="75px" height="75px" class="itf">Contactanos<img
-                    style="margin-left: 30px;" src="../img/itf.jpg" alt="itf logo" width="75px" height="75px"
-                    class="itf"></h1>
+            <h1 class="titulo1 bord1"><img style="margin-right: 30px;" src="../img/itf.jpg" alt="itf logo" width="75px"
+                    height="75px" class="itf">Contactanos<img style="margin-left: 30px;" src="../img/itf.jpg"
+                    alt="itf logo" width="75px" height="75px" class="itf"></h1>
             <br><br>
             <hr class="hrborder"><br><br><br>
             <div>
