--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -36,10 +36,9 @@
         <section>
             <!--Galeria de imagenes / se agregaran mas cuando avance el proyecto-->
             <br>
-            <h1 class="titulo1 bord1" style="text-align: center;"><img style="margin-right: 30px;" src="../img/itf.jpg"
-                    alt="itf logo" width="75px" height="75px" class="itf">Galeria de fotos<img
-                    style="margin-left: 30px;" src="../img/itf.jpg" alt="itf logo" width="75px" height="75px"
-                    class="itf"></h1><br><br>
+            <h1 class="titulo1 bord1"><img style="margin-right: 30px;" src="../img/itf.jpg" alt="itf logo" width="75px"
+                    height="75px" class="itf">Galeria de fotos<img style="margin-left: 30px;" src="../img/itf.jpg"
+                    alt="itf logo" width="75px" height="75px" class="itf"></h1><br><br>
             <hr class="hrborder"><br><br>
 
 
