--- a/pages/historia.html
+++ b/pages/historia.html
@@ -34,8 +34,8 @@
         <section>
             <!--Contenido1-->
             <br>
-            <h1 class="titulo1 bord1" style="text-align: center; "> <img style="margin-right: 30px;"
-                    src="../img/itf.jpg" alt="itf logo" width="75px" height="75px" class="itf">Historia Del Taekwon-Do
+            <h1 class="titulo1 bord1"> <img style="margin-right: 30px;" src="../img/itf.jpg" alt="itf logo" width="75px"
+                    height="75px" class="itf">Historia Del Taekwon-Do
                 ITF<img style="margin-left: 30px;" src="../img/itf.jpg" alt="itf logo" width="75px" height="75px"
                     class="itf"></h1>
             <br><br>
