--- a/pages/dondeencontrarnos.html
+++ b/pages/dondeencontrarnos.html
@@ -34,9 +34,9 @@
             <!--localizacion-->
 
             <br>
-            <h1 class="titulo1 bord1"><img style="margin-right: 30px;" src="../img/itf.jpg" alt="itf logo" width="75px"
-                    height="75px" class="itf">¿Quieres entrenar con nosotros?<img style="margin-left: 30px;"
-                    src="../img/itf.jpg" alt="itf logo" width="75px" height="75px" class="itf"></h1>
+            <h1 class="titulo1 bord1"><img style="margin-right: 30px;" src="../img/itf.jpg" alt="itf logo"
+                    class="itf">¿Quieres entrenar con nosotros?<img style="margin-left: 30px;" src="../img/itf.jpg"
+                    alt="itf logo" class="itf"></h1>
             <br><br><br>
             <hr class="hrborder">
             </fieldset>
@@ -62,11 +62,11 @@
 
         <p class="p1"> Seguinos en nuestras redes sociales!</p> <br>
         <a href="https://www.instagram.com/Diego.villegas6" target="_blank"><img class="iconored"
-                src="../img/logoinsta.png" alt="logo instagram" width="50px" height="50px"></a>
+                src="../img/logoinsta.png" alt="logo instagram"></a>
         <a href="https://www.facebook.com/DiegONvillegas/" target="_blank"><img class="iconored" src="../img/logofb.png"
-                alt="logo facebook" width="50px" height="50px"></a>
+                alt="logo facebook"></a>
         <a href="https://twitter.com/DiegoVillegas07" target="_blank"><img class="iconored" src="../img/logotwitter.png"
-                alt="logo twitter" width="50px" height="50px"></a>
+                alt="logo twitter"></a>
         <br><br><br><br>
         <span class="footer1">Pagina no oficial Taekwon-do ITF Copyright DiegoVillegas©</span>
 
