se modifico todo el sistema para que tuviera vista mobile

--- a/pages/dondeencontrarnos.html
+++ b/pages/dondeencontrarnos.html
@@ -31,28 +31,19 @@
     <hr class="hrborder">
     <main class="main">
         <section>
-            <!--localizacion-->
-
             <br>
             <h1 class="titulo1 bord1"><img style="margin-right: 30px;" src="../img/itf.jpg" alt="itf logo"
                     class="itf">¿Quieres entrenar con nosotros?<img style="margin-left: 30px;" src="../img/itf.jpg"
                     alt="itf logo" class="itf"></h1>
             <br><br><br>
-            <hr class="hrborder">
-            </fieldset>
-            <br><br><br>
-            <fieldset class="fieldsetlocali">
-                <p class="p3"><u><b>Encontranos en: <br><br> CLUB LA TABLADA</b></u></p>
-            </fieldset><br>
-            <img class="flecha2" src="../img/flecha2.png" alt="flecha para abajo"><br><br>
+            <hr class="hrborder"><br><br>
 
-            <fieldset class="localizacion1">
-                <span class="texto11">DIRECCION: PELAGIO LUNA 3550</span><br><br>
-                <span class="texto11">BARRIO: URCA</span><br><br>
-                <span class="texto11">CORDOBA CAPITAL - ARGENTINA</span><br><br>
-                <span class="texto11">LUNES Y VIERNES - INFANTILES 19HS.</span><br><br>
-                <span class="texto11">LUNES Y VIERNES - ADOLESCENTES/ADULTOS 20HS.</span><br><br>
-            </fieldset><br><br><br><br>
+            <p class="texto11">Encontranos en: <br><br> CLUB LA TABLADA</p><br><br><br>
+            <img class="flecha2" src="../img/flecha2.png" alt="flecha para abajo"><br><br>
+            <p class="texto11">Encontranos en: <br><br> DIRECCION: PELAGIO LUNA 3550<br><br>BARRIO: URCA<br><br>CORDOBA
+                CAPITAL - ARGENTINA<br><br>LUNES Y VIERNES - INFANTILES 19HS.<br><br>LUNES Y VIERNES -
+                ADOLESCENTES/ADULTOS 20HS.</p><br><br><br>
+
 
         </section>
     </main>
