--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -43,13 +43,12 @@
 
 
             <div class="grid2">
-                <div class="fot1"><img class="fotogaleria" src="../img/t1.jpg" alt="foto pateando 1"> </div>
-                <div class="fot2"><img class="fotogaleria" src="../img/t2.jpg" alt="foto pateando 2"> </div>
-                <div class="fot3"><img class="fotogaleria" src="../img/t3.jpg" alt="foto pateando 3"> </div>
-                <div class="fot4"><img class="fotogaleria" src="../img/suska1.jpg" alt="foto pateando 4"> </div>
-                <div class="fot5"><img class="fotogaleria" src="../img/suska2.jpg" alt="foto pateando 5"> </div>
-                <div class="fot6"><img class="fotogaleria1" src="../img/t5.jpg" alt="foto logo taekwondo itf"
-                        width="300px" height="250px"> </div>
+                <div class="fot1"><img class="fotogaleria4" src="../img/t1.jpg" alt="foto pateando 1"> </div>
+                <div class="fot2"><img class="fotogaleria4" src="../img/t2.jpg" alt="foto pateando 2"> </div>
+                <div class="fot3"><img class="fotogaleria4" src="../img/t3.jpg" alt="foto pateando 3"> </div>
+                <div class="fot4"><img class="fotogaleria4" src="../img/suska1.jpg" alt="foto pateando 4"> </div>
+                <div class="fot5"><img class="fotogaleria4" src="../img/suska2.jpg" alt="foto pateando 5"> </div>
+                <div class="fot6"><img class="fotogaleria1" src="../img/t5.jpg" alt="foto logo taekwondo itf"> </div>
             </div>
             <br><br><br>
 
