--- a/pages/historia.html
+++ b/pages/historia.html
@@ -32,126 +32,121 @@
     <hr class="hrborder">
     <main class="main">
         <section>
-            <!--Contenido1-->
+            <!--Contenido 1-->
+
             <br>
-            <h1 class="titulo1 bord1"> <img style="margin-right: 30px;" src="../img/itf.jpg" alt="itf logo"
-                    class="itf">Historia Del Taekwon-Do
-                ITF<img style="margin-left: 30px;" src="../img/itf.jpg" alt="itf logo" class="itf"></h1>
+            <h1 class="titulo1 bord1"><img style="margin-right: 30px;" src="../img/itf.jpg" alt="itf logo"
+                    class="itf">Historia del Taekwondo<img style="margin-left: 30px;" src="../img/itf.jpg"
+                    alt="itf logo" class="itf"></h1>
+            <br><br><br>
+            <hr class="hrborder"><br><br><br><br>
+            <h2><u class="t1">ACERCA DEL TAEKWON-DO</u></h2><br><br>
             <br><br>
-            <hr class="hrborder"><br><br><br><br><br>
-            <div>
-                <h2><u class="t1">ACERCA DEL TAEKWON-DO</u></h2><br><br>
+            <p class="textohistoria">Técnicamente, 1955 señaló el comienzo del Taekwon-Do como un arte
+                marcial
+                formalmente
+                reconocido en Corea. Durante ese año se formó una junta especial que incluía a políticos
+                electos, líderes militares y empresariales, historiadores, profesores de la Oh Do Kwan y
+                Chung Do Kwan, y otros líderes prominentes de la sociedad.
+                El General Choi Hong Hi convocó a la Junta cuando se dio cuenta de que necesitaría el apoyo
+                a su iniciativa para nombrar al Arte Marcial Nacional de Corea.
+                Durante ese período se realizaron muchos esfuerzos para restaurar y revitalizar el Orgullo
+                Nacional de Corea, ya que su cultura había sufrido terriblemente durante la ocupación
+                colonial.
+                Esta unidad fue influenciada por la política presidencial que veía mal abrazar preferencias
+                japonesas.
+                El General Choi sabía que necesitaría la eventual autorización del Presidente y
+                percibió que lo lograría con la ayuda de prestigiosos miembros de la sociedad.
+                Finalmente la Junta aprobó el nombre de Taekwon-Do, que presentó. Este nombre único de
+                Taekwon-Do logró sustituir los términos como Tang Soo Do, Gong Soo Do o Kwon Bup, que tenían
+                sus raíces en artes extranjeras.
+                El primer Presidente de la República de Corea, Dr. Seung-man Rhee, aprobó el nombre como
+                prueba de la caligrafía de Taekwon-Do que él escribió. De ahí que el 11 de abril de 1955 se
+                ha convertido en la fecha de nacimiento oficial del Taekwon-Do.
+                En 1959, el Taekwon-Do se extendió más allá de sus fronteras nacionales. El padre del
+                Taekwon-Do y diecinueve de sus principales cinturones negros partieron a una gira por el
+                Lejano Oriente. La misma fue un gran éxito, asombrando a todos los espectadores con la
+                excelencia de las técnicas del Taekwon-Do.
+                En ese año, Choi fue elevado a dos puestos ilustres; Presidente de su recién formada
+                Asociación Coreana de Taekwon-Do y Comandante Adjunto del segundo Ejército en Tae Gu. En
+                1965 el Embajador Choi, teniente general de dos estrellas retirado, fue nombrado por el
+                Gobierno de la República de Corea para llevar una misión de buena voluntad a Alemania
+                Occidental, Italia, Turquía, Reino Árabe Unido, Malasia y Singapur. Este viaje fue
+                significativo ya que el Embajador, por primera vez en la historia de Corea, declaró al
+                Taekwon-Do como el arte marcial nacional de Corea.
+                Esta fue la base no sólo para el establecimiento de Asociaciones de Taekwon-Do en aquellos
+                países, sino también para la formación de la Federación Internacional de Taekwon-Do tal como
+                se la conoce hoy en día.
+                En 1966, el sueño del joven estudiante enfermizo de la caligrafía,
+                que llegó a Embajador y a Presidente de la Asociación del arte marcial más respetada en el
+                mundo, se hizo realidad. El 22 de marzo, se formó la Federación Internacional de Taekwon-Do
+                con las asociaciones en Vietnam, Malasia, Singapur, Alemania Occidental, los Estados Unidos,
+                Turquía, Italia, República Árabe de Egipto y Corea.
+                Los valores filosóficos y los objetivos de Taekwon-Do están firmemente arraigados en la
+                tradicional cultura moral de Oriente. En el aspecto técnico, las tácticas defensivas y
+                ofensivas se basan en los principios de la física, en particular la Ley de Newton, que
+                explica cómo generar la máxima fuerza al aumentar la velocidad y la masa durante la
+                ejecución de un movimiento.
+                Queriendo compartir los resultados de sus reflexiones filosóficas y sus experimentos
+                técnicos, el General Choi planificó y escribió una obra de referencia única, la Enciclopedia
+                del Taekwon-Do. En sus quince volúmenes, explicó en detalladamente las normas y prácticas de
+                este arte.
+                Siempre buscando la excelencia, el General Choi presentó al Taekwon-Do como en un estado de
+                continua evolución, abierto a los cambios que mejorarían su eficacia. Escribió que
+                “Cualquier persona que cree que ha cumplido plenamente con su deber pronto perecerá”. Del
+                mismo modo, cualquier empresa que considere que ha alcanzado sus objetivos es probable que
+                pierda impulso, se estanque y muera.
+                Desde el comienzo, el Taekwon-Do nunca ha dejado de evolucionar, impulsado por la fuerte
+                voluntad y un mucho esfuerzo por su Fundador. Los líderes de la ITF hoy también reconocen la
+                necesidad de evolucionar y ellos tienen la misma pasión por el futuro de la
+                organización.</p>
 
-                <fieldset class="fieldhistoria">
+            <br><br><br>
+            <img class="fotogaleria" src="../img/historiaitf.png" alt="foto juntos al greneral choi"><br><br>
+            <p class="p2">“Las 24 formas representan las 24 horas, un día o toda mi vida” <br>
+                Gral Choi Hong Hi
+            </p><br><br><br><br><br><br><br><br><br>
 
-                    <span><b class="texto6"><br><br>Técnicamente, 1955 señaló el comienzo del Taekwon-Do como un arte
-                            marcial
-                            formalmente
-                            reconocido en Corea. Durante ese año se formó una junta especial que incluía a políticos
-                            electos, líderes militares y empresariales, historiadores, profesores de la Oh Do Kwan y
-                            Chung Do Kwan, y otros líderes prominentes de la sociedad. <br><br>
-                            El General Choi Hong Hi convocó a la Junta cuando se dio cuenta de que necesitaría el apoyo
-                            a su iniciativa para nombrar al Arte Marcial Nacional de Corea.
-                            Durante ese período se realizaron muchos esfuerzos para restaurar y revitalizar el Orgullo
-                            Nacional de Corea, ya que su cultura había sufrido terriblemente durante la ocupación
-                            colonial.
-                            Esta unidad fue influenciada por la política presidencial que veía mal abrazar preferencias
-                            japonesas. <br><br>
-                            El General Choi sabía que necesitaría la eventual autorización del Presidente y
-                            percibió que lo lograría con la ayuda de prestigiosos miembros de la sociedad.
-                            Finalmente la Junta aprobó el nombre de Taekwon-Do, que presentó. Este nombre único de
-                            Taekwon-Do logró sustituir los términos como Tang Soo Do, Gong Soo Do o Kwon Bup, que tenían
-                            sus raíces en artes extranjeras.
-                            El primer Presidente de la República de Corea, Dr. Seung-man Rhee, aprobó el nombre como
-                            prueba de la caligrafía de Taekwon-Do que él escribió. De ahí que el 11 de abril de 1955 se
-                            ha convertido en la fecha de nacimiento oficial del Taekwon-Do. <br><br>
-                            En 1959, el Taekwon-Do se extendió más allá de sus fronteras nacionales. El padre del
-                            Taekwon-Do y diecinueve de sus principales cinturones negros partieron a una gira por el
-                            Lejano Oriente. La misma fue un gran éxito, asombrando a todos los espectadores con la
-                            excelencia de las técnicas del Taekwon-Do.
-                            En ese año, Choi fue elevado a dos puestos ilustres; Presidente de su recién formada
-                            Asociación Coreana de Taekwon-Do y Comandante Adjunto del segundo Ejército en Tae Gu. En
-                            1965 el Embajador Choi, teniente general de dos estrellas retirado, fue nombrado por el
-                            Gobierno de la República de Corea para llevar una misión de buena voluntad a Alemania
-                            Occidental, Italia, Turquía, Reino Árabe Unido, Malasia y Singapur. Este viaje fue
-                            significativo ya que el Embajador, por primera vez en la historia de Corea, declaró al
-                            Taekwon-Do como el arte marcial nacional de Corea.
-                            Esta fue la base no sólo para el establecimiento de Asociaciones de Taekwon-Do en aquellos
-                            países, sino también para la formación de la Federación Internacional de Taekwon-Do tal como
-                            se la conoce hoy en día. <br><br>
-                            En 1966, el sueño del joven estudiante enfermizo de la caligrafía,
-                            que llegó a Embajador y a Presidente de la Asociación del arte marcial más respetada en el
-                            mundo, se hizo realidad. El 22 de marzo, se formó la Federación Internacional de Taekwon-Do
-                            con las asociaciones en Vietnam, Malasia, Singapur, Alemania Occidental, los Estados Unidos,
-                            Turquía, Italia, República Árabe de Egipto y Corea. <br><br>
-                            Los valores filosóficos y los objetivos de Taekwon-Do están firmemente arraigados en la
-                            tradicional cultura moral de Oriente. En el aspecto técnico, las tácticas defensivas y
-                            ofensivas se basan en los principios de la física, en particular la Ley de Newton, que
-                            explica cómo generar la máxima fuerza al aumentar la velocidad y la masa durante la
-                            ejecución de un movimiento.
-                            Queriendo compartir los resultados de sus reflexiones filosóficas y sus experimentos
-                            técnicos, el General Choi planificó y escribió una obra de referencia única, la Enciclopedia
-                            del Taekwon-Do. En sus quince volúmenes, explicó en detalladamente las normas y prácticas de
-                            este arte. <br><br>
-                            Siempre buscando la excelencia, el General Choi presentó al Taekwon-Do como en un estado de
-                            continua evolución, abierto a los cambios que mejorarían su eficacia. Escribió que
-                            “Cualquier persona que cree que ha cumplido plenamente con su deber pronto perecerá”. Del
-                            mismo modo, cualquier empresa que considere que ha alcanzado sus objetivos es probable que
-                            pierda impulso, se estanque y muera.
-                            Desde el comienzo, el Taekwon-Do nunca ha dejado de evolucionar, impulsado por la fuerte
-                            voluntad y un mucho esfuerzo por su Fundador. Los líderes de la ITF hoy también reconocen la
-                            necesidad de evolucionar y ellos tienen la misma pasión por el futuro de la
-                            organización. <br><br></b></span>
-                </fieldset>
-                <br><br><br>
-                <img class="fotogaleria" src="../img/historiaitf.png" alt="foto juntos al greneral choi"><br><br>
-                <p class="p2">“Las 24 formas representan las 24 horas, un día o toda mi vida” <br>
-                    Gral Choi Hong Hi
-                </p>
+            <!--contenido2-->
+            <h2><u class="t1">FUNDADOR</u></h2><br><br>
 
-            </div>
+            <p class="textohistoria">El Embajador Choi fue el “fundador” del
+                Taekwon-Do como es acreditado por la
+                Enciclopedia Británica.
+                Como miembro fundador del Ejército surcoreano enseñó artes marciales a los soldados
+                asignados a él desde 1946. Nombró al Taekwon-Do y lo promocionó sin cesar como el arte
+                marcial de defensa personal coreano.
+                En 1957 fue el vicepresidente de la Asociación de Taekwon-Do de Corea, de breve duración. En
+                1959 formó la Asociación Coreana de Taekwon-Do (KTA) y sirvió como el primer presidente. br
+                También en 1959, escribió el primer libro sobre el Taekwon-Do y dirigió el equipo militar de
+                Taekwon-Do en las demostraciones en Vietnam y Taiwán, marcando la primera vez en la historia
+                que el Taekwon-Do fue realizado en el extranjero.
+                El General Choi idearía las 26 Formas o Tuls. Estas fueron las primeras formas coreanas
+                jamás creadas.
+                En 1962 presentó personalmente el Taekwon-Do en Malasia cuando fue asignado allí como el
+                primer embajador de Corea.
+                En 1965 dirigió de buena voluntad, una gira alrededor del mundo patrocinada por el gobierno
+                de Corea. La visita formó la base para la creación en 1966, de la Federación Internacional
+                de Taekwon-Do (ITF), primer órgano rector mundial para el Taekwon-Do. Esto marcó la primera
+                vez que Corea fue sede de una organización internacional.
+                La ITF crecería hasta tener millones de miembros en más de cien países y él presidiría
+                durante su vida, 17 de sus campeonatos del mundo.
+                El General Choi viajó por el mundo sin
+                descanso para enseñar y promover el Taekwon-Do original. Fue el autor de 5 libros sobre el
+                tema, muchos de los cuales tenían numerosas ediciones y varias reimpresiones. Sus trabajos
+                escritos han sido traducidos a por lo menos 8 idiomas. También supervisó el desarrollo de
+                diversos tipos de grabaciones electrónicas de lo que él creó; lo que hace del Taekwon-Do el
+                arte marcial más documentado nunca. </p>
+
+            <br><br><br>
+            <img class="fotogaleria2" src="../img/generalchoi1.png" alt="general choi 1">
+            <img class="fotogaleria22" src="../img/generalchoi2.png" alt="general choi 2">
             <br><br>
-            <hr class="hrborder"><br><br><br><br><br><br><br>
-            <div>
-                <!--contenido2-->
-                <h2><u class="t1">FUNDADOR</u></h2><br><br>
-                <fieldset class="fieldhistoria"><span><b class="texto6"><br><br>El Embajador Choi fue el “fundador” del
-                            Taekwon-Do como es acreditado por la
-                            Enciclopedia Británica. <br><br>
-                            Como miembro fundador del Ejército surcoreano enseñó artes marciales a los soldados
-                            asignados a él desde 1946. Nombró al Taekwon-Do y lo promocionó sin cesar como el arte
-                            marcial de defensa personal coreano. <br><br>
-                            En 1957 fue el vicepresidente de la Asociación de Taekwon-Do de Corea, de breve duración. En
-                            1959 formó la Asociación Coreana de Taekwon-Do (KTA) y sirvió como el primer presidente. br
-                            También en 1959, escribió el primer libro sobre el Taekwon-Do y dirigió el equipo militar de
-                            Taekwon-Do en las demostraciones en Vietnam y Taiwán, marcando la primera vez en la historia
-                            que el Taekwon-Do fue realizado en el extranjero. <br><br>
-                            El General Choi idearía las 26 Formas o Tuls. Estas fueron las primeras formas coreanas
-                            jamás creadas. <br><br>
-                            En 1962 presentó personalmente el Taekwon-Do en Malasia cuando fue asignado allí como el
-                            primer embajador de Corea. <br><br>
-                            En 1965 dirigió de buena voluntad, una gira alrededor del mundo patrocinada por el gobierno
-                            de Corea. La visita formó la base para la creación en 1966, de la Federación Internacional
-                            de Taekwon-Do (ITF), primer órgano rector mundial para el Taekwon-Do. Esto marcó la primera
-                            vez que Corea fue sede de una organización internacional. <br><br>
-                            La ITF crecería hasta tener millones de miembros en más de cien países y él presidiría
-                            durante su vida, 17 de sus campeonatos del mundo. <br><br>
-                            El General Choi viajó por el mundo sin
-                            descanso para enseñar y promover el Taekwon-Do original. Fue el autor de 5 libros sobre el
-                            tema, muchos de los cuales tenían numerosas ediciones y varias reimpresiones. Sus trabajos
-                            escritos han sido traducidos a por lo menos 8 idiomas. También supervisó el desarrollo de
-                            diversos tipos de grabaciones electrónicas de lo que él creó; lo que hace del Taekwon-Do el
-                            arte marcial más documentado nunca. <br><br></b></span></fieldset>
-                <br><br><br>
-                <img class="fotogaleria2" style="margin-right: 50px;" src="../img/generalchoi1.png"
-                    alt="general choi 1">
-                <img class="fotogaleria2" style="margin-left: 50px;" src="../img/generalchoi2.png" alt="general choi 2">
-                <br><br>
-                <p class="p2">“Aquí dejo el Taekwondo para la humanidad como una huella del hombre del siglo XX” <br>
-                    Gral Choi Hong Hi
-                </p>
-                <br><br><br><br><br>
-            </div>
+            <p class="p2">“Aquí dejo el Taekwondo para la humanidad como una huella del hombre del siglo XX” <br>
+                Gral Choi Hong Hi
+            </p>
+            <br><br><br><br><br>
+
         </section>
     </main>
     <hr class="hrborder">
