se agrego comentario en page localizacion

--- a/pages/dondeencontrarnos.html
+++ b/pages/dondeencontrarnos.html
@@ -31,6 +31,7 @@
     <hr class="hrborder">
     <main class="main">
         <section>
+            <!--Datos localizacion-->
             <br>
             <h1 class="titulo1 bord1"><img style="margin-right: 30px;" src="../img/itf.jpg" alt="itf logo"
                     class="itf">¿Quieres entrenar con nosotros?<img style="margin-left: 30px;" src="../img/itf.jpg"
