--- a/pages/dondeencontrarnos.html
+++ b/pages/dondeencontrarnos.html
@@ -41,7 +41,7 @@
 
             <p class="texto11">Encontranos en: <br><br> CLUB LA TABLADA</p><br><br><br>
             <img class="flecha2" src="../img/flecha2.png" alt="flecha para abajo"><br><br>
-            <p class="texto11">Encontranos en: <br><br> DIRECCION: PELAGIO LUNA 3550<br><br>BARRIO: URCA<br><br>CORDOBA
+            <p class="texto11">DIRECCION: PELAGIO LUNA 3550<br><br>BARRIO: URCA<br><br>CORDOBA
                 CAPITAL - ARGENTINA<br><br>LUNES Y VIERNES - INFANTILES 19HS.<br><br>LUNES Y VIERNES -
                 ADOLESCENTES/ADULTOS 20HS.</p><br><br><br>
 
